[package]
name = "programmatic-pte-interactions"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }

rand = "0.8.5"
hex = { version = "0.4.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json", "blocking"] }